Officially license under AGPLv3

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "cartifacts"
 version = "1.0.0"
 description = "A generic storage mechanism for CI artifacts that don't fit anywhere else."
 authors = ["Matthew Gamble <git@matthewgamble.net>"]
-license = "GPL3"
+license = "AGPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.10"
