--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,10 @@ license = "AGPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Flask = "^2.1.2"
 boto3 = "^1.24.17"
+celery = "^5.2.7"
+Flask = "^2.1.2"
+rule-engine = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
 boto3-stubs = {extras = ["s3"], version = "^1.23.5"}
