Make mypy ignore rule-engine because it lacks typing info
Upstream issue:
https://github.com/zeroSteiner/rule-engine/issues/43

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,3 +58,9 @@ strict_equality = true
 warn_redundant_casts = true
 warn_unused_configs = true
 warn_unused_ignores = true
+
+[[tool.mypy.override]]
+module = [
+    "rule_engine",
+]
+ignore_missing_imports = true
