Resolve celey typing issues by ignoring them

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,6 @@ invoke = "^1.7.1"
 isort = "^5.10.1"
 mypy = "^0.971"
 pep8-naming = "^0.13.1"
-celery-types = "^0.13.1"
 
 [tool.black]
 target-version = ["py310"]
@@ -59,8 +58,9 @@ warn_redundant_casts = true
 warn_unused_configs = true
 warn_unused_ignores = true
 
-[[tool.mypy.override]]
+[[tool.mypy.overrides]]
 module = [
+    "celery",
     "rule_engine",
 ]
 ignore_missing_imports = true
