--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,17 +39,14 @@ mypy = "^0.971"
 pep8-naming = "^0.13.1"
 
 [tool.black]
-target-version = ["py310"]
+target-version = ["py310", "py311"]
 line-length = 100
 
 [tool.isort]
 profile = "black"
-multi_line_output = 3
 line_length = 100
-known_tests = "tests"
 sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
 lines_after_imports = 2
-lines_between_sections = 1
 
 [tool.mypy]
 check_untyped_defs = true
