--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,15 +16,14 @@ celery = "^5.2.7"
 Flask = "^2.1.3"
 rule-engine = "^3.5.0"
 
-[tool.poetry.dev-dependencies]
-boto3-stubs = {extras = ["s3"], version = "^1.24.41"}
-
-# Code quality packages
+[tool.poetry.group.dev.dependencies]
 bandit = "^1.7.4"
 black = "^22.6.0"
+boto3-stubs = {extras = ["s3"], version = "^1.24.41"}
 flake8 = "^4.0.1"
 flake8-annotations-complexity = "^0.0.7"
 flake8-bandit = "^3.0.0"
+flake8-black = "^0.3.6"
 flake8-breakpoint = "^1.1.0"
 flake8-bugbear = "^22.7.1"
 flake8-builtins = "^1.5.3"
