--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ flake8-bugbear = "^22.12.6"
 flake8-builtins = "^1.5.3"
 flake8-comprehensions = "^3.10.1"
 flake8-eradicate = "^1.4.0"
+flake8-executable = "^2.1.2"
 flake8-expression-complexity = "^0.0.11"
 flake8-isort = "^4.2.0"
 flake8-requirements = "^1.7.5"
