Update code quality checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,11 +49,9 @@ sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
 lines_after_imports = 2
 
 [tool.mypy]
-check_untyped_defs = true
-strict_equality = true
-warn_redundant_casts = true
-warn_unused_configs = true
-warn_unused_ignores = true
+python_version = "3.10"
+strict = true
+warn_unreachable = true
 
 [[tool.mypy.overrides]]
 module = [
