--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ warn_unreachable = true
 [[tool.mypy.overrides]]
 module = [
     "celery",
+    "celery.*",
     "rule_engine",
 ]
 ignore_missing_imports = true
