--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ line-length = 100
 [tool.isort]
 profile = "black"
 line_length = 100
+known_tests = "tests"
 sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
 lines_after_imports = 2
 
